[project]
name = "discord-bot"
version = "0.1.0"
description = "Object-Oriented Python workshop for hack.place()"
license = "MIT"
authors = [{ name = "Anish Pallati", email = "anishp@duck.com" }]
dependencies = []
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.rye]
managed = true
dev-dependencies = ["black>=23.7.0", "ruff>=0.0.284"]
[tool.hatch.metadata]
allow-direct-references = true
